--- a/single-product.html
+++ b/single-product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио</title>
+    <title>К-001м</title>
     <link rel="stylesheet" href="css/main.css?v=7">
     <link rel="icon" href="https://remarkproduction.net/favicon.png" type="image/png">
     <link rel="icon" type="image/ico" href="img/favicon.svg" sizes="16x16">
@@ -19,50 +19,73 @@
       </div>
     </header>
     <div class="page">
-      <section class="section" style="background-image: url(img/contacts-bg.jpg)">
+      <section class="section">
+        <div class="wrapper">
+          <div class="section__content">
+            <div class="product-main">
+              <div class="product-main__row">
+                <div class="product-main__img"><img data-src="img/upload/product-1.jpg" alt=""/>
+                </div>
+                <div class="product-main__info">
+                  <h1 class="product-main__title">К-001м</h1>
+                  <div class="product-main__features">
+                    <div class="product-main__feature"><span class="product-main__feature-label">Стоимость:</span><span class="product-main__feature-text">от 50 400 рублей</span></div>
+                    <div class="product-main__feature"><span class="product-main__feature-label">Матеариалы:</span><span class="product-main__feature-text">Сосна</span></div>
+                  </div>
+                  <a class="btn btn_medium product-main__btn js-get-modal" href="#orderModal"><span class="btn__inner"><span class="btn__text">Заказать лестницу</span></span></a>
+                  <ul class="product-main__list list-dotted">
+                    <li><span>Тип</span><span>Г-образная</span></li>
+                    <li><span>Варианты</span><span>8</span></li>
+                    <li><span>Высота лестниц, мм</span><span>2730-3120</span></li>
+                    <li><span>Угол подъёма</span><span>42&#176;</span></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section">
         <div class="wrapper">
           <div class="section__heading">
-            <h2 class="section__title"><b>Контакты</b></h2>
+            <h2 class="section__title">Варинаты моделей</h2>
           </div>
           <div class="section__content">
-            <div class="contacts">
-              <div class="contacts__row">
-                <div class="contacts__info">
-                  <div class="contacts__item">
-                    <div class="contacts__item-label">Телефон</div><a class="contacts__item-text" href="tel:8 (4852) 67-07-98">8 (4852) 67-07-98</a>
-                  </div>
-                  <div class="contacts__item">
-                    <div class="contacts__item-label">E-mail</div><a class="contacts__item-text" href="mailto:gornica.yr76@yandex.ru">gornica.yr76@yandex.ru</a>
-                  </div>
-                  <div class="contacts__item">
-                    <div class="contacts__item-label">Адреc</div>
-                    <div class="contacts__item-text">г.&nbsp;Ярославль ул.&nbsp;Магистральная&nbsp;дом&nbsp;7</div>
-                  </div>
-                  <div class="contacts__item">
-                    <div class="contacts__item-label">Время работы</div>
-                    <div class="contacts__item-text">Пн-Пт: 9:00-17:00</div>
-                    <div class="contacts__item-text">Сб: 10:00-16:00</div>
-                    <div class="contacts__item-text">Вс: Выходной</div>
-                  </div>
-                  <div class="contacts__item">
-                    <div class="contacts__item-label">Для быстрой связи с&nbsp;нами</div>
-                    <div class="contacts__item-social"></div>
-                  </div>
-                  <div class="social-links">
-                    <div class="social-links__row"><a class="social-links__item social-links__item_vk" href="https://vk.com/id504788328" target="_blank">
-                        <svg>
-                          <use xlink:href="sprites/sprite-mono.svg#vk"></use>
-                        </svg></a><a class="social-links__item social-links__item_wa" href="https://wa.me/79301108149/" target="_blank">
-                        <svg>
-                          <use xlink:href="sprites/sprite-mono.svg#whatsapp"></use>
-                        </svg></a><a class="social-links__item social-links__item_ok" href="https://ok.ru/profile/562363252726" target="_blank">
-                        <svg>
-                          <use xlink:href="sprites/sprite-mono.svg#odnoklassniki"></use>
-                        </svg></a></div>
+            <div class="product-variants">
+              <div class="product-variants__tabs">
+                <div class="tabs">
+                  <div class="tabs__row">
+                    <button class="tabs__btn tabs__btn_active" data-tab-link="#">Модель 1</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 2</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 3</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 4</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 5</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 6</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 7</button>
+                    <button class="tabs__btn" data-tab-link="#">Модель 8</button>
                   </div>
                 </div>
-                <div class="contacts__panorama">
-                  <div class="contacts__panorama-container js-panorama"></div>
+              </div>
+              <div class="product-variants__tab">
+                <div class="product-variants__row">
+                  <div class="product-variants__info">
+                    <ul>
+                      <li>Мин. проем 2-ого этажа: 2700 х 920 мм</li>
+                      <li>Угол наклона марша 42°</li>
+                      <li>Количество ступеней: 14 шт</li>
+                      <li>Толщина ступеней: 40 мм</li>
+                      <li>Высота шага: 195 мм</li>
+                    </ul><br>
+                    <h3>Стоимость:</h3>
+                    <ul>
+                      <li>47 990 рублей</li>
+                      <li>52 990 рублей с подступенками</li>
+                      <li>44 250 рублей  под покраску</li>
+                      <li>49 050 рублей под покраску с подступенками</li>
+                    </ul>
+                  </div>
+                  <div class="product-variants__img"><img data-src="img/upload/product-scheme-1.jpg" alt=""/>
+                  </div>
                 </div>
               </div>
             </div>
